cabal-version: 2.2
name:
  carbon
version:
  0.1
synopsis:
  See README for more info
description:
  See README for more info
homepage:
  https://github.com/chessai/carbon
bug-reports:
  https://github.com/chessai/carbon/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Database
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.5

library
  hs-source-dirs:
    src
  exposed-modules:
    Carbon
  build-depends:
    , base >= 4.11 && < 4.14
    , builder >= 0.2 && < 0.3
--    , ip >= 1.4 && < 1.6
    , primitive >= 0.7 && < 0.8
--    , primitive-offset >= 0.2 && < 0.3
--    , primitive-unaligned >= 0.1 && < 0.2
    , primitive-unlifted >= 0.1 && < 0.2
    , sockets >= 0.6 && < 0.7
--    , small-bytearray-builder >= 0.2 && < 0.3
--    , vector >= 0.12 && < 0.13
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/carbon.git
